--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
     "start:test": "cross-env NODE_ENV=test node index.js",
     "build:client": "cd client && npm run build",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
