--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,6 @@
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "firebase": "^9.6.10",
     "morgan": "^1.10.0",
@@ -17,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.1",
     "react-stripe-checkout": "^2.6.3",
     "recharts": "^2.0.9",
