--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
     "start:test": "cross-env NODE_ENV=test node index.js",
-    "build:client": "cd client && npm run build",
+    "build:client": "cd client && CI=false && npm run build",
     "build": "cd client && npm install && npm run build"
   },
   "keywords": [
