edited pipeline.yml to fix test errors

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       - name: build
         run: npm run build:client
       - name: test
-        run: npm run test:all
+        run: npm test
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
