--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,19 +31,13 @@ jobs:
       - name: build
         run: npm run build:client
       - name: test
-        run: npm test
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
-          start: npm run start:test
-          wait-on: http://localhost:3001
+        run: npm run test
       - name: deploy to heroku
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.8.8
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "fullstack-open-part11-bloglist"
+          heroku_app_name: "airshopecommerce"
           heroku_email: "l0ve2cr3ate@gmail.com"
           procfile: "web: npm start"
           healthcheck: "https://fullstack-open-part11-bloglist.herokuapp.com/health"
