edited github workflow

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm run test
       - name: deploy to heroku
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') }}
-        - uses: akhileshns/heroku-deploy@v3.12.12 
+        uses: akhileshns/heroku-deploy@v3.8.8
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "airshopecommerce"
@@ -45,5 +45,3 @@ jobs:
           HD_SECRET: ${{secrets.PASS_SEC}}
           HD_SKIP_PREFLIGHT_CHECK: true
       - uses: actions/checkout@v2
-    
-      
