--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.12",
+    "redis": "^4.0.6",
     "rotating-file-stream": "^3.0.3",
     "stripe": "^8.174.0",
     "swagger-jsdoc": "^6.2.0",
